# queerchat

./: Cargo.toml  queer.json  queer.toml  queerusers.json
example/: queerusers.toml
src/: config.rs  main.rs  messages.rs  server.rs  users.rs
